[tool.poetry]
name = "backend"
version = "1.1"
description = "test"
authors = ["Moorthy <moorthy.chandiran21@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.34.2"
fastapi = {extras = ["all"], version = "^0.115.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
