[tool.poetry]
name = "backend"
version = "1.1"
description = "test"
authors = ["Moorthy <moorthy.chandiran21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.34.2"
fastapi = "^0.95.1"  # Make sure FastAPI is added here as a dependency if not already present
pyodbc = "^4.0"  # Include other dependencies as required
